Bug 386235 the <link> tag for stylesheets can cause text in document frame to be inaccessible r=aaronleventhal a=dsicore