accessible/src/atk/nsMaiInterfaceHypertext.cpp
@@ -86,13 +86,13 @@ getLinkCountCB(AtkHypertext *aText)
     if (!accWrap)
         return -1;
 
-    nsCOMPtr<nsIAccessibleHyperText> accHyperlink;
+    nsCOMPtr<nsIAccessibleHyperText> hyperText;
     accWrap->QueryInterface(NS_GET_IID(nsIAccessibleHyperText),
-                            getter_AddRefs(accHyperlink));
-    NS_ENSURE_TRUE(accHyperlink, -1);
+                            getter_AddRefs(hyperText));
+    NS_ENSURE_TRUE(hyperText, -1);
 
     PRInt32 count = -1;
-    nsresult rv = accHyperlink->GetLinks(&count);
+    nsresult rv = hyperText->GetLinks(&count);
     NS_ENSURE_SUCCESS(rv, -1);
 
     return count;
@@ -105,13 +105,13 @@ getLinkIndexCB(AtkHypertext *aText, gint aCharIndex)
     if (!accWrap)
         return -1;
 
-    nsCOMPtr<nsIAccessibleHyperText> accHyperlink;
+    nsCOMPtr<nsIAccessibleHyperText> hyperText;
     accWrap->QueryInterface(NS_GET_IID(nsIAccessibleHyperText),
-                            getter_AddRefs(accHyperlink));
-    NS_ENSURE_TRUE(accHyperlink, -1);
+                            getter_AddRefs(hyperText));
+    NS_ENSURE_TRUE(hyperText, -1);
 
     PRInt32 index = -1;
-    nsresult rv = accHyperlink->GetLinkIndex(aCharIndex, &index);
+    nsresult rv = hyperText->GetLinkIndex(aCharIndex, &index);
     NS_ENSURE_SUCCESS(rv, -1);
 
     return index;
